--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
     <!-- Abstract Section -->
     <div class="section-wrapper">
-      <h2>Abstract \uD83D\uDD0A</h2>
+      <h2>Abstract 📣</h2>
       <p>
         AI video generation is undergoing a revolution, with quality and realism advancing rapidly.
         These advances have led to a passionate scientific debate: Do video models learn “world models”
@@ -339,7 +339,7 @@
 
     <!-- Leaderboard Section -->
     <div class="leaderboard">
-      <h2>Leaderboard \uD83C\uDFC5</h2>
+      <h2>Leaderboard 🥇</h2>
       <table class="leaderboard-table">
         <thead>
           <tr>
@@ -418,7 +418,7 @@
 
     <!-- Video Model Samples -->
     <div class="section-wrapper">
-      <h2>Examples \uD83C\uDF9E\uFE0F</h2>
+      <h2>Examples 🎞️</h2>
     </div>
     <div class="video-samples">
       <!-- Left Arrow -->
