--- a/index.html
+++ b/index.html
@@ -300,14 +300,18 @@
     <header>
       <h1>Physics IQ Benchmark:<br>Do generative video models learn physical principles from watching videos?</h1>
       <div class="authors">
-        Saman Motamed<sup>1,*</sup>, Laura Culp<sup>2</sup>, Kevin Swersky<sup>2</sup>, 
-        Priyank Jaini<sup>2</sup>, Robert Geirhos<sup>2</sup>
+          Saman Motamed<sup>1,*</sup>, Laura Culp<sup>2</sup>, Kevin Swersky<sup>2</sup>, 
+          Priyank Jaini<sup>2,†</sup>, Robert Geirhos<sup>2,†</sup>
       </div>
       <div class="affiliations">
-        <strong>1:</strong> INSAIT, Sofia University &nbsp;&nbsp;
-        <strong>2:</strong> Google DeepMind
+          <strong>1:</strong> INSAIT, Sofia University, Bulgaria &nbsp;&nbsp;
+          <strong>2:</strong> Google DeepMind
       </div>
-      <div class="asterisk-note">* Work done while at Google DeepMind</div>
+      <div class="asterisk-note">
+          * Work done while at Google DeepMind.<br>
+          † Joint last authors.
+      </div>
+
     </header>
 
     <!-- Buttons -->
