--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Physics IQ Benchmark: Do generative video models learn physical principles from watching videos?</title>
+  <title>Physics-IQ Benchmark: Do generative video models learn physical principles from watching videos?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Use your custom duck favicon -->
@@ -533,7 +533,7 @@
     </div>
 
     <footer>
-      &copy; 2024 Physics IQ Benchmark Project
+      &copy; 2025 Physics-IQ Benchmark Project
     </footer>
   </div> <!-- End content-wrapper -->
 
