--- a/index.html
+++ b/index.html
@@ -300,17 +300,21 @@
     <header>
       <h1>Physics IQ Benchmark:<br>Do generative video models learn physical principles from watching videos?</h1>
       <div class="authors">
-          Saman Motamed<sup>1,*</sup>, Laura Culp<sup>2</sup>, Kevin Swersky<sup>2</sup>, 
-          Priyank Jaini<sup>2,†</sup>, Robert Geirhos<sup>2,†</sup>
+          <a href="https://sam-motamed.github.io/" target="_blank">Saman Motamed</a><sup>1,*</sup>, 
+          <a href="https://scholar.google.com/citations?user=vEZUEOQAAAAJ&hl=en" target="_blank">Laura Culp</a><sup>2</sup>, 
+          <a href="https://scholar.google.com/citations?user=IrixA8MAAAAJ&hl=en" target="_blank">Kevin Swersky</a><sup>2</sup>, 
+          <a href="https://priyankjaini.github.io/" target="_blank">Priyank Jaini</a><sup>2,†</sup>, 
+          <a href="https://robertgeirhos.com/" target="_blank">Robert Geirhos</a><sup>2,†</sup>
       </div>
       <div class="affiliations">
-          <strong>1:</strong> INSAIT, Sofia University, Bulgaria &nbsp;&nbsp;
+          <strong>1:</strong> INSAIT, Sofia University &nbsp;&nbsp;
           <strong>2:</strong> Google DeepMind
       </div>
       <div class="asterisk-note">
           * Work done while at Google DeepMind.<br>
           † Joint last authors.
       </div>
+
 
     </header>
 
