--- a/figures/fig1.html
+++ b/figures/fig1.html
@@ -24,24 +24,24 @@
 <body>
   <div class="gif-grid">
     <div class="gif-cell">
-      <img src="assets/r11.gif" alt="GIF r11">
-      <img src="assets/r12.gif" alt="GIF r12">
+      <img src="../assets/r11.gif" alt="GIF r11">
+      <img src="../assets/r12.gif" alt="GIF r12">
     </div>
     <div class="gif-cell">
-      <img src="assets/r12.gif" alt="GIF r12">
-      <img src="assets/r22.gif" alt="GIF r22">
+      <img src="../assets/r12.gif" alt="GIF r12">
+      <img src="../assets/r22.gif" alt="GIF r22">
     </div>
     <div class="gif-cell">
-      <img src="assets/r13.gif" alt="GIF r13">
-      <img src="assets/r23.gif" alt="GIF r23">
+      <img src="../assets/r13.gif" alt="GIF r13">
+      <img src="../assets/r23.gif" alt="GIF r23">
     </div>
     <div class="gif-cell">
-      <img src="assets/r14.gif" alt="GIF r14">
-      <img src="assets/r24.gif" alt="GIF r24">
+      <img src="../assets/r14.gif" alt="GIF r14">
+      <img src="../assets/r24.gif" alt="GIF r24">
     </div>
     <div class="gif-cell">
-      <img src="assets/r15.gif" alt="GIF r15">
-      <img src="assets/r25.gif" alt="GIF r25">
+      <img src="../assets/r15.gif" alt="GIF r15">
+      <img src="../assets/r25.gif" alt="GIF r25">
     </div>
   </div>
 </body>
