--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -18,6 +18,17 @@
       gap: 20px;
       width: 90%;
     }
+    .row-title {
+      grid-column: span 4;
+      font-weight: bold;
+      text-align: left;
+      margin: 10px 0;
+    }
+    .column-title {
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 10px;
+    }
     .grid-item {
       text-align: center;
     }
@@ -35,72 +46,88 @@
 <body>
   <h1>Video Performance Comparison</h1>
   <div class="grid-container">
+    <!-- Column Titles -->
+    <div class="column-title">Best Scenario</div>
+    <div class="column-title">Worst Scenario</div>
+    <div class="column-title" colspan="2">Ground Truth</div>
+
+    <!-- Row 1 Header -->
+    <div class="row-title">Best performing model: VideoPoet (multiframe) - Fluid dynamics</div>
     <!-- Row 1 -->
     <div class="grid-item">
-      <img src="assets/vpb1.gif" alt="Best Performing Model 1">
-      <div class="text">Best performing scenario (Fluid dynamics)</div>
+      <img src="../assets/vpb1.gif" alt="Best Performing Scenario">
+      <div class="text">"A white domino block is released above a mug of dark liquid."</div>
     </div>
     <div class="grid-item">
-      <img src="assets/vpw1.gif" alt="Worst Performing Model 1">
-      <div class="text">Worst performing scenario (Fluid dynamics)</div>
+      <img src="../assets/vpw1.gif" alt="Worst Performing Scenario">
+      <div class="text">"Juice being poured in a glass of water."</div>
     </div>
     <div class="grid-item">
-      <img src="assets/vpbgt1.gif" alt="Ground Truth Best 1">
+      <img src="../assets/vpbgt1.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="assets/vpwgt1.gif" alt="Ground Truth Worst 1">
+      <img src="../assets/vpwgt1.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
+
+    <!-- Row 2 Header -->
+    <div class="row-title">Best performing model: VideoPoet (multiframe) - Solid mechanics</div>
     <!-- Row 2 -->
     <div class="grid-item">
-      <img src="assets/vpb2.gif" alt="Best Performing Model 2">
-      <div class="text">Best performing scenario (Solid mechanics)</div>
+      <img src="../assets/vpb2.gif" alt="Best Performing Scenario">
+      <div class="text">"A kettlebell is placed on a paper cup."</div>
     </div>
     <div class="grid-item">
-      <img src="assets/vpw2.gif" alt="Worst Performing Model 2">
-      <div class="text">Worst performing scenario (Solid mechanics)</div>
+      <img src="../assets/vpw2.gif" alt="Worst Performing Scenario">
+      <div class="text">"A grey tennis ball rolls out of a black pipe."</div>
     </div>
     <div class="grid-item">
-      <img src="assets/vpbgt2.gif" alt="Ground Truth Best 2">
+      <img src="../assets/vpbgt2.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="assets/vpwgt2.gif" alt="Ground Truth Worst 2">
+      <img src="../assets/vpwgt2.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
+
+    <!-- Row 3 Header -->
+    <div class="row-title">Worst performing model: Lumiere (i2v) - Fluid dynamics</div>
     <!-- Row 3 -->
     <div class="grid-item">
-      <img src="assets/lumb1.gif" alt="Best Performing Lumiere 1">
-      <div class="text">Best performing scenario (Fluid dynamics)</div>
+      <img src="../assets/lumb1.gif" alt="Best Performing Scenario">
+      <div class="text">"Red liquid pouring in a glass."</div>
     </div>
     <div class="grid-item">
-      <img src="assets/lumw1.gif" alt="Worst Performing Lumiere 1">
-      <div class="text">Worst performing scenario (Fluid dynamics)</div>
+      <img src="../assets/lumw1.gif" alt="Worst Performing Scenario">
+      <div class="text">"Juice being poured into a glass that is already filled up."</div>
     </div>
     <div class="grid-item">
-      <img src="assets/lumbgt1.gif" alt="Ground Truth Lumiere Best 1">
+      <img src="../assets/lumbgt1.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="assets/lumgt1.gif" alt="Ground Truth Lumiere Worst 1">
+      <img src="../assets/lumgt1.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
+
+    <!-- Row 4 Header -->
+    <div class="row-title">Worst performing model: Lumiere (i2v) - Solid mechanics</div>
     <!-- Row 4 -->
     <div class="grid-item">
-      <img src="assets/lumb2.gif" alt="Best Performing Lumiere 2">
-      <div class="text">Best performing scenario (Solid mechanics)</div>
+      <img src="../assets/lumb2.gif" alt="Best Performing Scenario">
+      <div class="text">"A kettlebell is placed on a paper cup."</div>
     </div>
     <div class="grid-item">
-      <img src="assets/lumw2.gif" alt="Worst Performing Lumiere 2">
-      <div class="text">Worst performing scenario (Solid mechanics)</div>
+      <img src="../assets/lumw2.gif" alt="Worst Performing Scenario">
+      <div class="text">"A silk sheet being placed on a colorful ceramic teapot."</div>
     </div>
     <div class="grid-item">
-      <img src="assets/lumbgt2.gif" alt="Ground Truth Lumiere Best 2">
+      <img src="../assets/lumbgt2.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="assets/lumgt2.gif" alt="Ground Truth Lumiere Worst 2">
+      <img src="../assets/lumgt2.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
   </div>
