--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -52,7 +52,7 @@
     <div class="column-title" colspan="2">Ground Truth</div>
 
     <!-- Row 1 Header -->
-    <div class="row-title">Best performing model: VideoPoet (multiframe) - Fluid dynamics</div>
+    <div class="row-title">Best performing model: VideoPoet (multiframe)</div>
     <!-- Row 1 -->
     <div class="grid-item">
       <img src="../assets/vpb1.gif" alt="Best Performing Scenario">
@@ -72,7 +72,7 @@
     </div>
 
     <!-- Row 2 Header -->
-    <div class="row-title">Best performing model: VideoPoet (multiframe) - Solid mechanics</div>
+    <div class="row-title"></div>
     <!-- Row 2 -->
     <div class="grid-item">
       <img src="../assets/vpb2.gif" alt="Best Performing Scenario">
@@ -92,7 +92,7 @@
     </div>
 
     <!-- Row 3 Header -->
-    <div class="row-title">Worst performing model: Lumiere (i2v) - Fluid dynamics</div>
+    <div class="row-title">Worst performing model: Lumiere (i2v)</div>
     <!-- Row 3 -->
     <div class="grid-item">
       <img src="../assets/lumb1.gif" alt="Best Performing Scenario">
@@ -112,7 +112,7 @@
     </div>
 
     <!-- Row 4 Header -->
-    <div class="row-title">Worst performing model: Lumiere (i2v) - Solid mechanics</div>
+    <div class="row-title"></div>
     <!-- Row 4 -->
     <div class="grid-item">
       <img src="../assets/lumb2.gif" alt="Best Performing Scenario">
@@ -127,7 +127,7 @@
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumgt2.gif" alt="Ground Truth">
+      <img src="../assets/lumwgt2.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
   </div>
