--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -107,7 +107,7 @@
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumgt1.gif" alt="Ground Truth">
+      <img src="../assets/lumwgt1.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
 
