--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -49,7 +49,8 @@
     <!-- Column Titles -->
     <div class="column-title">Best Scenario</div>
     <div class="column-title">Worst Scenario</div>
-    <div class="column-title" colspan="2">Ground Truth</div>
+    <div class="column-title">Ground Truth</div>
+    <div class="column-title">Ground Truth</div>
 
     <!-- Row 1 Header -->
     <div class="row-title">Best performing model: VideoPoet (multiframe)</div>
