--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -14,12 +14,12 @@
     }
     .grid-container {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: auto repeat(4, 1fr);
       gap: 20px;
       width: 90%;
     }
     .row-title {
-      grid-column: span 4;
+      grid-column: span 5;
       font-weight: bold;
       text-align: left;
       margin: 10px 0;
@@ -34,12 +34,19 @@
     }
     .grid-item img {
       width: 100%;
-      max-width: 400px;
+      max-width: 200px;
       height: auto;
     }
     .text {
       margin-top: 10px;
       font-size: 0.9em;
+    }
+    .row-label {
+      writing-mode: vertical-rl;
+      text-orientation: mixed;
+      font-weight: bold;
+      text-align: center;
+      margin: auto;
     }
   </style>
 </head>
@@ -47,13 +54,14 @@
   <h1>Video Performance Comparison</h1>
   <div class="grid-container">
     <!-- Column Titles -->
+    <div></div> <!-- Empty cell for row labels -->
     <div class="column-title">Best Scenario</div>
     <div class="column-title">Worst Scenario</div>
     <div class="column-title">Ground Truth</div>
     <div class="column-title">Ground Truth</div>
 
-    <!-- Row 1 Header -->
-    <div class="row-title">Best performing model: VideoPoet (multiframe)</div>
+    <!-- Row 1 and 2 Label -->
+    <div class="row-label" rowspan="2">Best performing model: VideoPoet (multiframe)</div>
     <!-- Row 1 -->
     <div class="grid-item">
       <img src="../assets/vpb1.gif" alt="Best Performing Scenario">
@@ -72,8 +80,6 @@
       <div class="text">Ground Truth</div>
     </div>
 
-    <!-- Row 2 Header -->
-    <div class="row-title"></div>
     <!-- Row 2 -->
     <div class="grid-item">
       <img src="../assets/vpb2.gif" alt="Best Performing Scenario">
@@ -92,8 +98,8 @@
       <div class="text">Ground Truth</div>
     </div>
 
-    <!-- Row 3 Header -->
-    <div class="row-title">Worst performing model: Lumiere (i2v)</div>
+    <!-- Row 3 and 4 Label -->
+    <div class="row-label" rowspan="2">Worst performing model: Lumiere (i2v)</div>
     <!-- Row 3 -->
     <div class="grid-item">
       <img src="../assets/lumb1.gif" alt="Best Performing Scenario">
@@ -108,12 +114,10 @@
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumwgt1.gif" alt="Ground Truth">
+      <img src="../assets/lumgt1.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
 
-    <!-- Row 4 Header -->
-    <div class="row-title"></div>
     <!-- Row 4 -->
     <div class="grid-item">
       <img src="../assets/lumb2.gif" alt="Best Performing Scenario">
@@ -128,7 +132,7 @@
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumwgt2.gif" alt="Ground Truth">
+      <img src="../assets/lumgt2.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
   </div>
