--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -43,7 +43,7 @@
       font-size: 0.9em;
     }
     .row-label {
-      writing-mode: vertical-rl;
+      writing-mode: vertical-lr;
       text-orientation: mixed;
       font-weight: bold;
       text-align: center;
@@ -118,7 +118,7 @@
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumgt1.gif" alt="Ground Truth">
+      <img src="../assets/lumwgt1.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
 
@@ -136,7 +136,7 @@
       <div class="text">Ground Truth</div>
     </div>
     <div class="grid-item">
-      <img src="../assets/lumgt2.gif" alt="Ground Truth">
+      <img src="../assets/lumwgt2.gif" alt="Ground Truth">
       <div class="text">Ground Truth</div>
     </div>
   </div>
