--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -43,7 +43,7 @@
       font-size: 0.9em;
     }
     .row-label {
-      writing-mode: vertical-lr;
+      writing-mode: vertical-rl;
       text-orientation: mixed;
       font-weight: bold;
       text-align: center;
@@ -77,11 +77,11 @@
     </div>
     <div class="grid-item">
       <img src="../assets/vpbgt1.gif" alt="Ground Truth">
-      <div class="text">Ground Truth</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpwgt1.gif" alt="Ground Truth">
-      <div class="text">Ground Truth</div>
+      <div class="text"></div>
     </div>
 
     <!-- Row 2 -->
@@ -95,11 +95,11 @@
     </div>
     <div class="grid-item">
       <img src="../assets/vpbgt2.gif" alt="Ground Truth">
-      <div class="text">Ground Truth</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/vpwgt2.gif" alt="Ground Truth">
-      <div class="text">Ground Truth</div>
+      <div class="text"></div>
     </div>
 
     <!-- Row 3 and 4 Label -->
@@ -115,11 +115,11 @@
     </div>
     <div class="grid-item">
       <img src="../assets/lumbgt1.gif" alt="Ground Truth">
-      <div class="text">Ground Truth</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumwgt1.gif" alt="Ground Truth">
-      <div class="text">Ground Truth</div>
+      <div class="text"></div>
     </div>
 
     <!-- Row 4 -->
@@ -133,11 +133,11 @@
     </div>
     <div class="grid-item">
       <img src="../assets/lumbgt2.gif" alt="Ground Truth">
-      <div class="text">Ground Truth</div>
+      <div class="text"></div>
     </div>
     <div class="grid-item">
       <img src="../assets/lumwgt2.gif" alt="Ground Truth">
-      <div class="text">Ground Truth</div>
+      <div class="text"></div>
     </div>
   </div>
 </body>
