--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -50,7 +50,9 @@
       justify-content: center;
       align-items: center;
       transform: rotate(-90deg);
-      writing-mode: unset;
+      transform-origin: center left;
+      width: 0;
+      height: 100%;
     }
   </style>
 </head>
