--- a/figures/fig2.html
+++ b/figures/fig2.html
@@ -43,14 +43,14 @@
       font-size: 0.9em;
     }
     .row-label {
+      writing-mode: vertical-lr;
+      text-orientation: mixed;
       font-weight: bold;
       text-align: center;
       grid-row: span 2;
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 0;
-      height: 100%;
     }
   </style>
 </head>
