--- a/figures/fig1.html
+++ b/figures/fig1.html
@@ -15,6 +15,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 5px; /* Space between GIFs in the same column */
+
     }
     .gif-cell img {
       width: 300px; /* Increased GIF size */
